Add /fips-column-name endpoint (#121)
* pickle data from associated_columns endpoint
* Adds fips-column-name endpoint, adds docs
